--- a/coins/templates/coins/base.html
+++ b/coins/templates/coins/base.html
@@ -42,6 +42,8 @@
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-login">
                         Sign in
                     </button>
+                    <br>
+                    <a href="{% url 'coins:create-account-page' %}"> Create account </a>
                 {% endif %}
             </div>
         </div>
