--- a/coins/templates/coins/index.html
+++ b/coins/templates/coins/index.html
@@ -8,7 +8,7 @@
         <div class="col-2">
             {% for continent in continent_list %}
                 <div>
-                    {{ continent }}
+                    <a href="{% url 'coins:continent-detail' continent.id %}">{{ continent.name }}</a>
                 </div>
             {% endfor %}
         </div>
@@ -24,7 +24,9 @@
                         <br>
                         {{ coin.denomination }} {{ coin.year }}
                         <br>
-                        {{ coin.owner}}
+                        <a href="{% url 'coins:user-cabinet' pk=coin.owner.id %}">
+                            {{ coin.owner}}
+                        </a>
                     </p>
                 </div>        
                 {% endfor %}
