--- a/coins/templates/coins/user_cabinet.html
+++ b/coins/templates/coins/user_cabinet.html
@@ -48,8 +48,18 @@
         <input type="hidden" name="pk" value="{{coin.id}}">
       </form>
     </div>
-    
+
   </div>
   {% endfor %}
+{% endif %}
+{% if user.is_authenticated and user != owner %}
+<h5>Create message to {{ owner }}</h5>
+<form action="{% url 'coins:message-from-cabinet' pk=user.id %}" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="hidden" name="author_id" value="{{ user.id }}">
+    <input type="hidden" name="recipient_id" value="{{ owner.id }}">
+    <input type="submit" value="send message" class="btn btn-primary">
+</form>
 {% endif %}
 {% endblock %}
