--- a/coins/templates/coins/base.html
+++ b/coins/templates/coins/base.html
@@ -32,7 +32,7 @@
         <div class="col-3">
           <a href="{% url 'coins:index'%}">
             <img
-              class="w-100 h-100"
+              class="w-100"
               src="{% static 'coins/img/coins.png' %}"
               alt="logo"
             />
