--- a/coins/templates/coins/user_cabinet.html
+++ b/coins/templates/coins/user_cabinet.html
@@ -65,4 +65,38 @@
     <input type="submit" value="send message" class="btn btn-primary">
 </form>
 {% endif %}
+<h4>My offer to ennother user</h4>
+{% if offers_made or multi_offers_made %}
+  <div class="row">
+    {% for offer in offers_made %}
+      <div class="col-12">
+        <p>
+          You suggested {{ offer.coin_to_give }} for {{ offer.coin_to_get }} user {{ offer.responder.username }} 
+          {% if offer.status == 'c' %}
+            <form action="{% url 'coins:cancel-offer' pk=offer.id %}" method="post">
+              {% csrf_token %}
+              <input type="submit" value="Cancel offer" class="btn btn-danger">
+            </form>
+          {% endif %}
+        </p>
+      </div>
+    {% endfor %}
+
+    {% for multi_offer in multi_offers_made %}
+      <div class="col-12">
+        <p>
+          You suggested {{ multi_offer.coins_to_give.all|join:', ' }} for {{ multi_offer.coins_to_get.all|join:', ' }} user {{ multi_offer.responder.username }}
+          {% if multi_offer.status == 'c' %}
+            <form action="{% url 'coins:cancel-multi-offer' pk=multi_offer.id %}" method="post">
+              {% csrf_token %}
+              <input type="submit" value="Cancel multioffer" class="btn btn-danger">
+            </form>
+          {% endif %}
+        </p>
+      </div>
+    {% endfor %}
+  </div>
+
+{% endif %}
+
 {% endblock %}
