--- a/coins/templates/coins/continent_detail.html
+++ b/coins/templates/coins/continent_detail.html
@@ -15,7 +15,7 @@
         </div>
         <div class="col-10">
             <div class="row">
-                {% for coin in continent.get_coins %}
+                {% for coin in continent.get_active_coins %}
                     <div class="col-4">
                         <strong>{{ coin.denomination }} - {{ coin.year }}</strong><br>
                         Country: {{ coin.country.name }}<br>                
