--- a/coins/templates/coins/index.html
+++ b/coins/templates/coins/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-10">
             <div class="row">
-                {% for coin in coin_list %}
+                {% for coin in page_obj %}
                 <div class="col-3 text-center border ">
                     <a href="{% url 'coins:coin-detail' pk=coin.id %}">
                         <img src="{{ coin.img_front.url }}" alt="coin" class="w-75 h-75 object-fit-contain border rounded">
@@ -22,7 +22,7 @@
                     <p>
                         {{ coin.country }} 
                         <br>
-                        {{ coin.denomination }} {{ coin.year }}
+                        {{ coin.denomination }} {{ coin.year }}                     
                         <br>
                         <a href="{% url 'coins:user-cabinet' pk=coin.owner.id %}">
                             {{ coin.owner}}
@@ -31,8 +31,27 @@
                 </div>        
                 {% endfor %}
             </div>
+            <div class="row justify-content-between my-3 fs-4">
+                <div class="col-3">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+                </div>
+                <div class="col-4 text-center">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </div>
+                <div class="col-3 text-end">
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">next</a>  
+                    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+                </div>        
+            </div>
         </div>
     </div>
+
+    
     
 
 
