--- a/coins/templates/coins/base.html
+++ b/coins/templates/coins/base.html
@@ -25,6 +25,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
+    {% block style %}{% endblock %} 
   </head>
   <body>
     <div class="container">
@@ -137,7 +138,9 @@
                 Close
               </button>
               <button type="submit" class="btn btn-primary">Sign in</button>
+             
             </div>
+
           </div>
         </form>
       </div>
