--- a/coins/templates/coins/coin_detail.html
+++ b/coins/templates/coins/coin_detail.html
@@ -3,25 +3,67 @@
 {% block title %}
     {{ coin }}
 {% endblock %}
+{% block style %}
+<style>
+  .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto;
+        /* 15% from the top and centered */
+        padding: 20px;
+        border: 1px solid #888;
+        width: 60%;
+  }
+</style>  
+{% endblock %} 
 
 {% block content %}
 <div class="row" >
     <div class="col-6 text-center">
-        <a href="{{ coin.img_front.url }}" target="_blank">
-            <img class="w-75" src="{{ coin.img_front.url }}" alt="">            
-        </a>
-        <div class="row">
-            <div class="col-4">
-                <img class="w-100" src="{{ coin.img_back.url }}" alt="">                
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="{{ coin.img_front.url }}" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="{{ coin.img_back.url }}" class="d-block w-100" alt="...">
+              </div>
+              {% if coin.img_add_1 %}
+              <div class="carousel-item">
+                <img src="{{ coin.img_add_1.url }}" class="d-block w-100" alt="...">
+              </div>
+              {% endif %}
+              {% if coin.img_add_2 %}
+              <div class="carousel-item">
+                <img src="{{ coin.img_add_2.url }}" class="d-block w-100" alt="...">
+              </div>
+              {% endif %}
+          
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      
+        <div class="row mt-2">
+            <div class="col-3">            
+            <img id='img-front' class="w-100" src="{{ coin.img_front.url }}" alt="">     
+            </div>
+            <div class="col-3">
+                <img id="img-back" class="w-100" src="{{ coin.img_back.url }}" alt="">                
             </div>
             {% if coin.img_add_1 %}
-            <div class="col-4">
-                <img class="w-100" src="{{ coin.img_add_1.url }}" alt="">                
+            <div class="col-3">
+                <img id="img-add-1" class="w-100" src="{{ coin.img_add_1.url }}" alt="">                
             </div>
             {% endif %} 
             {% if coin.img_add_2 %}
-            <div class="col-4">
-                <img class="w-100" src="{{ coin.img_add_2.url }}" alt="">                
+            <div class="col-3">
+                <img id="img-add-2" class="w-100" src="{{ coin.img_add_2.url }}" alt="">                
             </div>
             {% endif %}
         </div>
@@ -55,5 +97,42 @@
     </div>
 </div>
 
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <img src="" id="img-modal" alt="">
+  </div>
+</div>
 
+<script>
+  var modal = document.getElementById("myModal");
+  var img_modal = document.getElementById('img-modal');  
+  
+  document.getElementById('img-front').onclick=function() {
+    img_modal.src = "{{ coin.img_front.url }}";
+    modal.style.display = 'block';
+  };
+
+  modal.onclick = function() {
+    modal.style.display = '';
+  }
+
+  document.getElementById('img-back').onclick=function() {
+    img_modal.src = "{{ coin.img_back.url }}";
+    modal.style.display = 'block';
+  };
+  
+  {% if coin.img_add_1 %}
+  document.getElementById('img-add-1').onclick=function() {
+    img_modal.src = "{{ coin.img_add_1.url }}";
+    modal.style.display = 'block';
+  };
+  {% endif %}
+
+  {% if coin.img_add_2 %}
+  document.getElementById('img-add-2').onclick=function() {
+    img_modal.src = "{{ coin.img_add_2.url }}";
+    modal.style.display = 'block';
+  };
+  {% endif %}
+</script>
 {% endblock %}
