--- a/coins/templates/coins/user_cabinet.html
+++ b/coins/templates/coins/user_cabinet.html
@@ -4,6 +4,9 @@
 {% endblock %} 
 {% block content %}
 <h3>{{ owner }}'s cabinet</h3>
+{%if owner == user %}
+<a href="{% url 'coins:password-change' %}">password change</a>
+{% endif %}
 <h4>Coins for change </h4>
 <div class="row">
   {% for coin in owner.profile.active_coins %} 
